--- a/templates/client/template.html
+++ b/templates/client/template.html
@@ -54,9 +54,9 @@
                         </div>{% endcomment %}
                         <div id="menu" class="text-left ">
                             <ul class="offcanvas_main_menu">
-                                <li class="menu-item-has-children {% if active_page == "index" %}active{% endif %}"><a
+                                {% comment %}<li class="menu-item-has-children {% if active_page == "index" %}active{% endif %}"><a
                                         href="{% url 'client:index' %}">Home | 首页</a>
-                                </li>
+                                </li>{% endcomment %}
                                 <li class="menu-item-has-children {% if active_page == "shop" %}active{% endif %}"><a
                                         href="{% url 'client:shop' %}">shop | 商品</a>
                                 </li>
@@ -64,7 +64,7 @@
                                     <a href="#">Profile | 用户</a>
                                     <ul class="sub_menu">
                                         {% if request.user.is_authenticated %}
-                                            <li><a href="#">{% trans '资料' %}</a></li>
+                                            <li><a href="{% url 'client:profile' %}">{% trans '资料' %}</a></li>
                                             <li><a href="{% url 'client:cart' %}">{% trans '购物车' %}</a></li>
                                             <li><a href="{% url 'client:wishlist' %}">{% trans '心愿单' %}</a></li>
                                             <li><a href="{% url 'client:logout' %}">{% trans '登出' %}</a></li>
@@ -119,7 +119,7 @@
                                         class="ion-chevron-down"></i></a>
                                     <ul class="dropdown_links">
                                         {% if request.user.is_authenticated %}
-                                            <li><a href="#">{% trans '资料' %}</a></li>
+                                            <li><a href="{% url 'client:profile' %}">{% trans '资料' %}</a></li>
                                             <li><a href="{% url 'client:cart' %}">{% trans '购物车' %}</a></li>
                                             <li><a href="{% url 'client:wishlist' %}">{% trans '心愿单' %}</a></li>
                                             <li><a href="{% url 'client:logout' %}">{% trans '登出' %}</a></li>
@@ -246,9 +246,9 @@
                             <div class="main_menu">
                                 <nav>
                                     <ul>
-                                        <li {% if active_page == "index" %}class="active"{% endif %}><a
+                                        {% comment %}<li {% if active_page == "index" %}class="active"{% endif %}><a
                                                 href="{% url 'client:index' %}">Home | 首页</a>
-                                        </li>
+                                        </li>{% endcomment %}
                                         <li {% if active_page == "shop" %}class="active"{% endif %}><a
                                                 href="{% url 'client:shop' %}">shop | 商品</a>
                                         </li>
@@ -300,7 +300,7 @@
                                             | 用户 <i class="fa fa-angle-down"></i></a>
                                             <ul class="sub_menu pages">
                                                 {% if request.user.is_authenticated %}
-                                                    <li><a href="#">{% trans '资料' %}</a></li>
+                                                    <li><a href="{% url 'client:profile' %}">{% trans '资料' %}</a></li>
                                                     <li><a href="{% url 'client:cart' %}">{% trans '购物车' %}</a></li>
                                                     <li><a href="{% url 'client:wishlist' %}">{% trans '心愿单' %}</a>
                                                     </li>
