--- a/templates/client/register.html
+++ b/templates/client/register.html
@@ -125,23 +125,23 @@
                                 </div>
                             </div>
                             <div>
-                                <label class="form-label" for="{{ form.invitation_code.id_for_label }}">
-                                    {{ form.invitation_code.label }}
-                                    {% if form.invitation_code.field.required %}
+                                <label class="form-label" for="{{ form.invitor.id_for_label }}">
+                                    {{ form.invitor.label }}
+                                    {% if form.invitor.field.required %}
                                         <span style="color: red">*</span>
                                     {% endif %}
                                 </label>
                                 {% if invitation_code %}
-                                    {% render_field form.invitation_code class="form-control" value=invitation_code disabled="disabled" readonly="readonly" %}
+                                    {% render_field form.invitor class="form-control" value=invitation_code disabled="disabled" readonly="readonly" %}
                                 {% else %}
-                                    {% render_field form.invitation_code class="form-control" %}
+                                    {% render_field form.invitor class="form-control" %}
                                 {% endif %}
                                 <div>
-                                    {% if form.invitation_code.errors %}
+                                    {% if form.invitor.errors %}
                                         <p class="form-text"
-                                           style="color: red;">{{ form.invitation_code.errors.0 }}</p>
-                                    {% elif form.invitation_code.help_text %}
-                                        <p class="form-text text-muted">{{ form.invitation_code.help_text }}</p>
+                                           style="color: red;">{{ form.invitor.errors.0 }}</p>
+                                    {% elif form.invitor.help_text %}
+                                        <p class="form-text text-muted">{{ form.invitor.help_text }}</p>
                                     {% endif %}
                                 </div>
                             </div>
