--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -60,151 +60,20 @@
 <script src="{% static 'client/js/custom.js' %}"></script>
 
 <!-- Main JS -->
+<script>
+    const csrfToken = "{{ csrf_token }}"
+</script>
 <script src="{% static 'client/js/main.js' %}"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% block js %}
 {% endblock %}
 <script>
-    $(document).on('click', 'a.add_wishlist, button.add_wishlist', function (e) {
-        e.preventDefault();
-        let $this = $(this);
-        let variant_id = $this.data('variant');
-
-        $.ajax({
-            url: "{% url 'kern:wishlist' %}",
-            type: 'POST',
-            data: {
-                id: variant_id,
-            },
-            headers: {
-                'X-CSRFToken': '{{ csrf_token }}'
-            },
-            success: function (data) {
-                notyf.success(data["msg"]);
-            },
-            error: function (data) {
-                if (data.responseJSON["detail"] === "Authentication credentials were not provided.") {
-                    notyf.error('{% trans "用户尚未登录，无法使用该功能" %}');
-                } else {
-                    notyf.error(data["msg"]);
-                }
-            }
-        });
-    });
-    $(document).on('click', 'a.remove_wishlist, button.remove_wishlist', function (e) {
-        e.preventDefault();
-        let $this = $(this);
-        let variant_id = $this.data('variant');
-
-        $.ajax({
-            url: "{% url 'kern:wishlist' %}?id=" + variant_id,
-            type: 'DELETE',
-            data: {
-                id: variant_id,
-            },
-            headers: {
-                'X-CSRFToken': '{{ csrf_token }}'
-            },
-            success: function (data) {
-                console.log(data);
-                notyf.success(data["msg"]);
-                setTimeout(function () {
-                    window.location.reload();
-                }, 1500);
-            },
-            error: function (data) {
-                if (data.responseJSON["detail"] === "Authentication credentials were not provided.") {
-                    notyf.error('{% trans "用户尚未登录，无法使用该功能" %}');
-                } else {
-                    notyf.error(data["msg"]);
-                }
-            }
-        });
-    });
-    $(document).on('click', 'a.add_cart, button.add_cart', function (e) {
-        e.preventDefault();
-        let $this = $(this);
-        let variant_id = $this.data('variant');
-
-        $.ajax({
-            url: "{% url 'kern:cart' %}",
-            type: 'POST',
-            data: {
-                id: variant_id,
-            },
-            headers: {
-                'X-CSRFToken': '{{ csrf_token }}'
-            },
-            success: function (data) {
-                notyf.success(data["msg"]);
-            },
-            error: function (data) {
-                console.log(data)
-                if (data.responseJSON["detail"] === "Authentication credentials were not provided.") {
-                    notyf.error('{% trans "用户尚未登录，无法使用该功能" %}');
-                } else {
-                    notyf.error(data["msg"]);
-                }
-            }
-        });
-    });
-    $(document).on('click', 'a.remove_cart, button.remove_cart', function (e) {
-        e.preventDefault();
-        let $this = $(this);
-        let variant_id = $this.data('variant');
-
-        $.ajax({
-            url: "{% url 'kern:cart' %}?id=" + variant_id,
-            type: 'DELETE',
-            headers: {
-                'X-CSRFToken': '{{ csrf_token }}'
-            },
-            success: function (data) {
-                console.log(data);
-                notyf.success(data["msg"]);
-                setTimeout(function () {
-                    window.location.reload();
-                }, 1500);
-            },
-            error: function (data) {
-                console.log(data)
-                if (data.responseJSON["detail"] === "Authentication credentials were not provided.") {
-                    notyf.error('{% trans "用户尚未登录，无法使用该功能" %}');
-                } else {
-                    notyf.error(data["msg"]);
-                }
-            }
-        });
-    });
-    $(document).on('submit', 'form.add_cart_form', function (e) {
-        e.preventDefault();
-        let $this = $(this);
-        let $quantity = $this.find('input[name="quantity"]');
-        let variant_id = $quantity.data('variant');
-        $.ajax({
-            url: "{% url 'kern:cart' %}",
-            type: 'POST',
-            data: {
-                id: variant_id,
-                quantity: quantity,
-            },
-            headers: {
-                'X-CSRFToken': '{{ csrftoken }}'
-            },
-            success: function (data) {
-                notyf.success(data["msg"]);
-            },
-            error: function (data) {
-                if (data.responseJSON["detail"] === "Authentication credentials were not provided.") {
-                    notyf.error('{% trans "用户尚未登录，无法使用该功能" %}');
-                } else {
-                    notyf.error(data["msg"]);
-                }
-            }
-        });
-    });
+    $(document).on('click', 'a.add_wishlist, button.add_wishlist', add_wishlist);
+    $(document).on('click', 'a.remove_wishlist, button.remove_wishlist', remove_wishlist);
+    $(document).on('click', 'a.add_cart, button.add_cart', add_cart);
+    $(document).on('click', 'a.remove_cart, button.remove_cart', remove_cart);
+    $(document).on('submit', 'form.add_cart_form', submit_cart);
 </script>
-{% block js %}
-{% endblock %}
+
 </body>
 </html>
