--- a/templates/client/product.html
+++ b/templates/client/product.html
@@ -66,9 +66,9 @@
 
                             <div class="product_variant quantity">
                                 <label>{% trans "数量" %}</label>
-                                <input min="1" max="100" value="1" type="number">
-                                <button class="button" type="submit">{% trans "添加到购物车" %}</button>
-
+                                <input min="1" max="100" value="1" type="number" id="quantity">
+                                <button class="button add_cart" data-variant="{{ product.variant.id }}"
+                                        type="submit">{% trans "添加到购物车" %}</button>
                             </div>
                             <div class=" product_d_action">
                                 <ul>
