--- a/templates/client/base.html
+++ b/templates/client/base.html
@@ -10,8 +10,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'client/img/favicon.ico' %}">
 
-    <!-- CSS
-    ========================= -->
+    <!-- CSS -->
 
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="{% static 'client/css/plugins.css' %}">
