:zap: Update:   - Add Balance Payment

--- a/templates/client/payment.html
+++ b/templates/client/payment.html
@@ -25,8 +25,8 @@
                             <td>
                                 {% if to_currency is not None and to_amount is not None %}
                                     <span>{{ from_amount }} {{ from_currency }}</span>
-                                    <span><i
-                                            class="fa-solid fa-right-left"></i> <strong>{{ to_amount }} {{ to_currency }}</strong></span>
+                                    <span><i class="fa-solid fa-right-left"></i>
+                                        <strong>{{ to_amount }} {{ to_currency }}</strong></span>
                                 {% else %}
                                     <span><strong>{{ from_amount }} {{ from_currency }}</strong></span>
                                 {% endif %}
