:zap: Update:   - Change the color of error display

--- a/templates/client/checkout.html
+++ b/templates/client/checkout.html
@@ -429,7 +429,7 @@
                                             下单前请再次确认您的账单地址、发货地址信息等。错误的输入可能会导致商品无法即时送达。</p>
                                     {% endblocktrans %}
                                 </div>
-                                <div class="mb-20">
+                                <div class="mb-20 text-danger">
                                     {{ form.non_field_errors }}
                                 </div>
                                 <div class="order_button">
